# enamel

./: README.md  demo.py  gitignore  setup.cfg
dataset/: enamel.csv
enam/: __init__.py  datautils.py  evaluate.py  execute.py  header.py  utils.py
samples/: enamel-references.json  humaneval-canonical.json  humanevalplus-canonical.json
