[metadata]
name = enam
version = 0.0.2
author = Ruizhong Qiu et al.
author_email = rq5@illinois.edu
description = "ENAMEL: A benchmark for evaluating the capability of LLMs in generating efficient code"
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
license_files = LICENSE
url = https://github.com/q-rz/enamel
project_urls =
    Repository = https://github.com/q-rz/enamel
    Issues = https://github.com/q-rz/enamel/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
python_requires = >=3.10
install_requires =
    tqdm>=3.1.4
    numpy>=1.4.0
    pandas>=1.0
